--- a/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,6 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Fasterflect.Netstandard" Version="1.0.9" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.0.0" />
+    <PackageReference Include="SevenTiny.Bantina" Version="1.0.14" />
+    <PackageReference Include="SevenTiny.Bantina.Configuration.Json" Version="1.0.4" />
+    <PackageReference Include="SevenTiny.Bantina.Configuration.MySql" Version="1.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ScriptManager\" />
   </ItemGroup>
 
 </Project>
