--- a/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
@@ -5,15 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fasterflect.Netstandard" Version="1.0.9" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.0.0" />
-    <PackageReference Include="SevenTiny.Bantina" Version="1.0.14" />
-    <PackageReference Include="SevenTiny.Bantina.Configuration.Json" Version="1.0.4" />
-    <PackageReference Include="SevenTiny.Bantina.Configuration.MySql" Version="1.0.10" />
+    <Compile Remove="ScriptManager\**" />
+    <EmbeddedResource Remove="ScriptManager\**" />
+    <None Remove="ScriptManager\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ScriptManager\" />
+    <PackageReference Include="Fasterflect.Netstandard" Version="1.0.9" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.0.0" />
+    <PackageReference Include="SevenTiny.Bantina" Version="1.0.15" />
+    <PackageReference Include="SevenTiny.Bantina.Configuration.Json" Version="1.0.4" />
+    <PackageReference Include="SevenTiny.Bantina.Configuration.MySql" Version="1.0.10" />
   </ItemGroup>
 
 </Project>
