--- a/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <RepositoryType>.net core</RepositoryType>
+    <PackageProjectUrl>https://github.com/sevenTiny/Seventiny.Cloud.ScriptEngine</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sevenTiny/Seventiny.Cloud.ScriptEngine.git</RepositoryUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sevenTiny/src/master/images/7tiny.ico</PackageIconUrl>
+    <Copyright>7tiny</Copyright>
+    <PackageLicenseUrl>https://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <Company>www.7tiny.com</Company>
+    <Authors>7tiny</Authors>
+    <Description></Description>
   </PropertyGroup>
 
   <ItemGroup>
