--- a/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Seventiny.Cloud.ScriptEngine/Seventiny.Cloud.ScriptEngine.csproj
@@ -23,9 +23,11 @@
   <ItemGroup>
     <PackageReference Include="Fasterflect.Netstandard" Version="1.0.9" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="SevenTiny.Bantina" Version="1.0.15" />
-    <PackageReference Include="SevenTiny.Bantina.Configuration.Json" Version="1.0.4" />
+    <PackageReference Include="SevenTiny.Bantina.Configuration.Json" Version="1.0.6" />
     <PackageReference Include="SevenTiny.Bantina.Configuration.MySql" Version="1.0.11" />
+    <PackageReference Include="SevenTiny.Bantina.Logging" Version="1.0.10" />
   </ItemGroup>
 
 </Project>
