--- a/10-Code/Tests/Test.Seventiny.Cloud.ScriptEngine/Test.Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Tests/Test.Seventiny.Cloud.ScriptEngine/Test.Seventiny.Cloud.ScriptEngine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Seventiny.Cloud.ScriptEngine\Seventiny.Cloud.ScriptEngine.csproj" />
+    <ProjectReference Include="..\..\SevenTiny.Cloud.ScriptEngine\SevenTiny.Cloud.ScriptEngine.csproj" />
   </ItemGroup>
 
 </Project>
