--- a/10-Code/Tests/Test.Seventiny.Cloud.ScriptEngine/Test.Seventiny.Cloud.ScriptEngine.csproj
+++ b/10-Code/Tests/Test.Seventiny.Cloud.ScriptEngine/Test.Seventiny.Cloud.ScriptEngine.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -11,10 +11,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\SevenTiny.Cloud.ScriptEngine\SevenTiny.Cloud.ScriptEngine.csproj" />
   </ItemGroup>
 
 </Project>
