--- a/10-Code/SevenTiny.Cloud.ScriptEngine.CSharp/SevenTiny.Cloud.ScriptEngine.CSharp.csproj
+++ b/10-Code/SevenTiny.Cloud.ScriptEngine.CSharp/SevenTiny.Cloud.ScriptEngine.CSharp.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SevenTiny.Cloud.FaaS\SevenTiny.Cloud.FaaS.csproj" />
+    <ProjectReference Include="..\SevenTiny.Cloud.ScriptEngine\SevenTiny.Cloud.ScriptEngine.csproj" />
   </ItemGroup>
 
 </Project>
