--- a/10-Code/Tests/Test.SevenTiny.Cloud.ScriptEngine.CSharp/Test.SevenTiny.Cloud.ScriptEngine.CSharp.csproj
+++ b/10-Code/Tests/Test.SevenTiny.Cloud.ScriptEngine.CSharp/Test.SevenTiny.Cloud.ScriptEngine.CSharp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -7,14 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SevenTiny.Cloud.FaaS\SevenTiny.Cloud.FaaS.csproj" />
+    <ProjectReference Include="..\..\SevenTiny.Cloud.ScriptEngine.CSharp\SevenTiny.Cloud.ScriptEngine.CSharp.csproj" />
     <ProjectReference Include="..\..\SevenTiny.Cloud.ScriptEngine\SevenTiny.Cloud.ScriptEngine.csproj" />
   </ItemGroup>
 
