--- a/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
+++ b/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
@@ -5,19 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\models.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
-    <Protobuf Include="Protos\scriptservice.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\SevenTiny.Cloud.FaaS.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.10.1" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.25.0" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.25.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.25.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
 </Project>
