--- a/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
+++ b/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
@@ -5,12 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\SevenTiny.Cloud.FaaS.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.25.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SevenTiny.Cloud.FaaS\SevenTiny.Cloud.FaaS.csproj" />
   </ItemGroup>
 
 </Project>
