--- a/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
+++ b/Code/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\SevenTiny.Cloud.FaaS\SevenTiny.Cloud.FaaS.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
