--- a/Code/SevenTiny.Cloud.ScriptEngine.CSharp/SevenTiny.Cloud.ScriptEngine.CSharp.csproj
+++ b/Code/SevenTiny.Cloud.ScriptEngine.CSharp/SevenTiny.Cloud.ScriptEngine.CSharp.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\SevenTiny.Cloud.ScriptEngine\SevenTiny.Cloud.ScriptEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CodeSyntax\" />
+  </ItemGroup>
+
 </Project>
