移除FaaS，改成各语言独立部署到集群的模式，不进行中转

--- a/Code/DotNet/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
+++ b/Code/DotNet/SevenTiny.Cloud.FaaS.GRpc/SevenTiny.Cloud.FaaS.GRpc.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SevenTiny.Cloud.FaaS\SevenTiny.Cloud.FaaS.csproj" />
+    <ProjectReference Include="..\SevenTiny.Cloud.ScriptEngine.CSharp\SevenTiny.Cloud.ScriptEngine.CSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
