--- a/Code/DotNet/Tests/Test.SevenTiny.Cloud.FaaS.GRpc/Test.SevenTiny.Cloud.FaaS.GRpc.csproj
+++ b/Code/DotNet/Tests/Test.SevenTiny.Cloud.FaaS.GRpc/Test.SevenTiny.Cloud.FaaS.GRpc.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\helloworld.proto" />
     <None Remove="Protos\SevenTiny.Cloud.FaaS.proto" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.10.1" />
+    <PackageReference Include="Grpc.Auth" Version="2.27.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.25.0" />
     <PackageReference Include="Grpc.Tools" Version="2.25.0">
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\helloworld.proto" GrpcServices="Client" />
     <Protobuf Include="Protos\SevenTiny.Cloud.FaaS.proto" GrpcServices="Client" />
   </ItemGroup>
 
