--- a/src/dotnet/Chameleon.Faas.Api/appsettings.json
+++ b/src/dotnet/Chameleon.Faas.Api/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppName": "Chameleon.Faas.Api",
+  "BambooConfig": {
+    "Default": {
+      "RemoteAddress": "https://userName:password@gitee.com/seventiny/chameleon-config-repository.git",
+      "Branch": "dev"
+    }
+  }
 }
