change copy mode

--- a/src/dotnet/Tests/Test.Bamboo.ScriptEngine.CSharp/Test.Bamboo.ScriptEngine.CSharp.csproj
+++ b/src/dotnet/Tests/Test.Bamboo.ScriptEngine.CSharp/Test.Bamboo.ScriptEngine.CSharp.csproj
@@ -25,7 +25,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="ScriptEngine.CSharp.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
