--- a/src/dotnet/Chameleon.Faas.CSharp.Api/Properties/launchSettings.json
+++ b/src/dotnet/Chameleon.Faas.CSharp.Api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62340",
+      "applicationUrl": "http://localhost:18582",
       "sslPort": 0
     }
   },
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Chameleon.Faas.Api": {
+    "Chameleon.Faas.CSharp.Api": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
