--- a/src/dotnet/Chameleon.Faas.CSharp.Api/Chameleon.Faas.CSharp.Api.csproj
+++ b/src/dotnet/Chameleon.Faas.CSharp.Api/Chameleon.Faas.CSharp.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chameleon.Faas.Common\Chameleon.Faas.Common.csproj" />
+    <ProjectReference Include="..\Chameleon.Faas.Service\Chameleon.Faas.Service.csproj" />
+  </ItemGroup>
+
 </Project>
