--- a/src/dotnet/Chameleon.Faas.CSharp.Api/appsettings.json
+++ b/src/dotnet/Chameleon.Faas.CSharp.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AppName": "Chameleon.Faas.Api",
+  "AppName": "Chameleon.Faas.CSharp.Api",
   "BambooConfig": {
     "Default": {
       "RemoteAddress": "https://userName:password@gitee.com/seventiny/chameleon-config-repository.git",
