--- a/src/dotnet/Chameleon.Faas.Service/Chameleon.Faas.Service.csproj
+++ b/src/dotnet/Chameleon.Faas.Service/Chameleon.Faas.Service.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bamboo.ScriptEngine.CSharp\Bamboo.ScriptEngine.CSharp.csproj" />
+  </ItemGroup>
+
 </Project>
