--- a/src/dotnet/Bamboo.ScriptEngine.CSharp/Bamboo.ScriptEngine.CSharp.csproj
+++ b/src/dotnet/Bamboo.ScriptEngine.CSharp/Bamboo.ScriptEngine.CSharp.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Bamboo Script Engine with CSharp</Description>
+    <PackageProjectUrl>https://github.com/sevenTiny/Chameleon.FaaS</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sevenTiny/src/master/images/7tiny.ico</PackageIconUrl>
+    <RepositoryUrl>https://github.com/sevenTiny/Chameleon.FaaS</RepositoryUrl>
+    <RepositoryType>dotnet</RepositoryType>
+    <Copyright>7tiny</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
