--- a/src/dotnet/Bamboo.ScriptEngine.Core/Bamboo.ScriptEngine.Core.csproj
+++ b/src/dotnet/Bamboo.ScriptEngine.Core/Bamboo.ScriptEngine.Core.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Bamboo Script Engine Core</Description>
+    <PackageProjectUrl>https://github.com/sevenTiny/Chameleon.FaaS</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sevenTiny/src/master/images/7tiny.ico</PackageIconUrl>
+    <RepositoryUrl>https://github.com/sevenTiny/Chameleon.FaaS</RepositoryUrl>
+    <RepositoryType>dotnet</RepositoryType>
+    <Copyright>7tiny</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
